--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,14 @@
     display: none;
   }
   
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
   .card-hover {
     transition: all 0.3s ease;
   }
